@@ -12,6 +12,7 @@ import org.jgroups.protocols.pbcast.GMS;
 import org.jgroups.protocols.pbcast.JoinRsp;
 import org.jgroups.stack.Protocol;
 import org.jgroups.util.MessageBatch;
+import org.jgroups.util.Util;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
@@ -21,14 +22,15 @@ import java.util.List;
 /**
  * The AUTH protocol adds a layer of authentication to JGroups. It intercepts join and merge requests and rejects them
  * if the joiner or merger is not permitted to join a or merge into a cluster. AUTH should be placed right below
- * {@link GMS} in the configuration.
+ * {@link GMS} in the configuration.<br/>
+ * Note that some of the AuthTokens (such as MD5Token, SimpleToken etc) cannot prevent rogue members from joining a
+ * cluster, and are thus deprecated. Read the manual for a detailed description of why.
  * @author Chris Mills
  * @author Bela Ban
  */
 @XmlAttribute(attrs={
   "auth_value",                                                         // SimpleToken, MD5Token, X509Token
   "fixed_members_value", "fixed_members_seperator",                     // FixedMembershipToken
-  "block_time",                                                         // DemoToken
   "client_principal_name", "client_password", "service_principal_name", // Krb5Token
   "token_hash",                                                         // MD5Token
   "match_string", "match_ip_address", "match_logical_name",             // RegexMembership
@@ -37,17 +39,6 @@ import java.util.List;
 })
 @MBean(description="Provides authentication of joiners, to prevent un-authorized joining of a cluster")
 public class AUTH extends Protocol {
-
-    /** Interface to provide callbacks for handling up events */
-    public interface UpHandler {
-        /**
-         * Called when an up event has been received
-         * @param evt the event
-         * @return true if the event should be passed up, else false
-         */
-        boolean handleUpEvent(Event evt);
-    }
-
 
     /** Used on the coordinator to authentication joining member requests against */
     protected AuthToken             auth_token;
@@ -60,7 +51,7 @@ public class AUTH extends Protocol {
     protected Address               local_addr;
 
 
-    public AUTH() {name="AUTH";}
+    public AUTH() {}
 
     protected volatile boolean      authenticate_coord=true;
     
@@ -71,7 +62,7 @@ public class AUTH extends Protocol {
 
     @Property(name="auth_class",description="The fully qualified name of the class implementing the AuthToken interface")
     public void setAuthClass(String class_name) throws Exception {
-        Object obj=Class.forName(class_name).newInstance();
+        Object obj=Class.forName(class_name).getDeclaredConstructor().newInstance();
         auth_token=(AuthToken)obj;
         auth_token.setAuth(this);
     }
@@ -79,13 +70,15 @@ public class AUTH extends Protocol {
     public String    getAuthClass()                {return auth_token != null? auth_token.getClass().getName() : null;}
     public AuthToken getAuthToken()                {return auth_token;}
     public AUTH      setAuthToken(AuthToken token) {this.auth_token=token; return this;}
+    @Deprecated
     public AUTH      register(UpHandler handler)   {up_handlers.add(handler); return this;}
+    @Deprecated
     public AUTH      unregister(UpHandler handler) {up_handlers.remove(handler);return this;}
     public Address   getAddress()                  {return local_addr;}
     public PhysicalAddress getPhysicalAddress()    {return getTransport().getPhysicalAddress();}
 
 
-    protected List<Object> getConfigurableObjects() {
+    public List<Object> getConfigurableObjects() {
         List<Object> retval=new LinkedList<>();
         if(auth_token != null)
             retval.add(auth_token);
@@ -128,34 +121,27 @@ public class AUTH extends Protocol {
      * Finally the event is either a) discarded, or b) an event is sent down the stack using {@code down_prot.down()}
      * or c) the event (or another event) is sent up the stack using {@code up_prot.up()}.
      */
-    public Object up(Event evt) {
-        switch(evt.getType()) {
-            case Event.MSG:
-                Message msg=(Message)evt.getArg();
-
-                // If we have a join or merge request --> authenticate, else pass up
-                GMS.GmsHeader gms_hdr=getGMSHeader(evt);
-                if(gms_hdr != null && needsAuthentication(gms_hdr)) {
-                    AuthHeader auth_hdr=(AuthHeader)msg.getHeader(id);
-                    if(auth_hdr == null)
-                        throw new IllegalStateException(String.format("found %s from %s but no AUTH header", gms_hdr, msg.src()));
-                    if(!handleAuthHeader(gms_hdr, auth_hdr, msg)) // authentication failed
-                        return null;    // don't pass up
-                }
-                break;
+    public Object up(Message msg) {
+        // If we have a join or merge request --> authenticate, else pass up
+        GMS.GmsHeader gms_hdr=getGMSHeader(msg);
+        if(gms_hdr != null && needsAuthentication(msg, gms_hdr)) {
+            AuthHeader auth_hdr=msg.getHeader(id);
+            if(auth_hdr == null) {
+                sendRejectionMessage(gms_hdr.getType(), msg.src(), "no AUTH header found in message");
+                throw new IllegalStateException(String.format("found %s from %s but no AUTH header", gms_hdr, msg.src()));
+            }
+            if(!handleAuthHeader(gms_hdr, auth_hdr, msg)) // authentication failed
+                return null;    // don't pass up
         }
-        if(!callUpHandlers(evt))
-            return null;
-
-        return up_prot.up(evt);
+        return up_prot.up(msg);
     }
 
     public void up(MessageBatch batch) {
         for(Message msg: batch) {
             // If we have a join or merge request --> authenticate, else pass up
             GMS.GmsHeader gms_hdr=getGMSHeader(msg);
-            if(gms_hdr != null && needsAuthentication(gms_hdr)) {
-                AuthHeader auth_hdr=(AuthHeader)msg.getHeader(id);
+            if(gms_hdr != null && needsAuthentication(msg, gms_hdr)) {
+                AuthHeader auth_hdr=msg.getHeader(id);
                 if(auth_hdr == null) {
                     log.warn("%s: found GMS join or merge request from %s but no AUTH header", local_addr, batch.sender());
                     sendRejectionMessage(gms_hdr.getType(), batch.sender(), "join or merge without an AUTH header");
@@ -179,28 +165,29 @@ public class AUTH extends Protocol {
      * a new response event back up the stack using {@code up_prot.up()}.
      */
     public Object down(Event evt) {
-        GMS.GmsHeader hdr = getGMSHeader(evt);
-        if(hdr != null && needsAuthentication(hdr)) {
-            // we found a join request message - now add an AUTH Header
-            Message msg=(Message)evt.getArg();
-            msg.putHeader(this.id, new AuthHeader(this.auth_token));
-        }
-
         if(evt.getType() == Event.SET_LOCAL_ADDRESS)
-            local_addr=(Address)evt.getArg();
-
+            local_addr=evt.getArg();
         return down_prot.down(evt);
     }
 
 
+    public Object down(Message msg) {
+        GMS.GmsHeader hdr=getGMSHeader(msg);
+        if(hdr != null && needsAuthentication(msg, hdr))
+            msg.putHeader(this.id, new AuthHeader(this.auth_token));
+        return down_prot.down(msg);
+    }
 
-    protected boolean needsAuthentication(GMS.GmsHeader hdr) {
+    protected boolean needsAuthentication(Message msg, GMS.GmsHeader hdr) {
         switch(hdr.getType()) {
             case GMS.GmsHeader.JOIN_REQ:
             case GMS.GmsHeader.JOIN_REQ_WITH_STATE_TRANSFER:
             case GMS.GmsHeader.MERGE_REQ:
                 return true;
             case GMS.GmsHeader.JOIN_RSP:
+                JoinRsp jr=getJoinResponse(msg);
+                if(jr.getFailReason() != null)
+                    return false;
             case GMS.GmsHeader.MERGE_RSP:
             case GMS.GmsHeader.INSTALL_MERGE_VIEW:
                 return this.authenticate_coord;
@@ -212,20 +199,17 @@ public class AUTH extends Protocol {
 
     /**
      * Handles a GMS header
-     * @param gms_hdr
-     * @param msg
-     * @return true if the message should be passed up, or else false
+     * @return true if the message should be processed (= passed up), or else false
      */
     protected boolean handleAuthHeader(GMS.GmsHeader gms_hdr, AuthHeader auth_hdr, Message msg) {
-        if(needsAuthentication(gms_hdr)) {
+        if(needsAuthentication(msg, gms_hdr)) {
             if(this.auth_token.authenticate(auth_hdr.getToken(), msg))
                 return true; //  authentication passed, send message up the stack
-            else {
-                log.warn("%s: failed to validate AuthHeader (token: %s) from %s; dropping message",
-                         local_addr, auth_token.getClass().getSimpleName(), msg.src());
-                sendRejectionMessage(gms_hdr.getType(), msg.getSrc(), "authentication failed");
-                return false;
-            }
+            log.warn("%s: failed to validate AuthHeader (token: %s) from %s; dropping message and sending " +
+                       "rejection message",
+                     local_addr, auth_token.getClass().getSimpleName(), msg.src());
+            sendRejectionMessage(gms_hdr.getType(), msg.getSrc(), "authentication failed");
+            return false;
         }
         return true;
     }
@@ -250,43 +234,33 @@ public class AUTH extends Protocol {
         JoinRsp joinRes=new JoinRsp(error_msg); // specify the error message on the JoinRsp
         Message msg = new Message(dest).putHeader(GMS_ID, new GMS.GmsHeader(GMS.GmsHeader.JOIN_RSP))
           .setBuffer(GMS.marshal(joinRes));
-        if(this.authenticate_coord)
-            msg.putHeader(this.id, new AuthHeader(this.auth_token));
-        down_prot.down(new Event(Event.MSG, msg));
+        down_prot.down(msg);
     }
 
     protected void sendMergeRejectionMessage(Address dest) {
-        GMS.GmsHeader hdr=new GMS.GmsHeader(GMS.GmsHeader.MERGE_RSP);
-        hdr.setMergeRejected(true);
+        GMS.GmsHeader hdr=new GMS.GmsHeader(GMS.GmsHeader.MERGE_RSP).setMergeRejected(true);
         Message msg=new Message(dest).setFlag(Message.Flag.OOB).putHeader(GMS_ID, hdr);
         if(this.authenticate_coord)
             msg.putHeader(this.id, new AuthHeader(this.auth_token));
         log.debug("merge response=%s", hdr);
-        down_prot.down(new Event(Event.MSG, msg));
+        down_prot.down(msg);
     }
 
-    protected boolean callUpHandlers(Event evt) {
-        boolean pass_up=true;
-        for(UpHandler handler: up_handlers) {
-            if(!handler.handleUpEvent(evt))
-                pass_up=false;
-        }
-        return pass_up;
-    }
 
-    /**
-     * Get the header from a GMS message
-     * @param evt The event object passed in to AUTH
-     * @return A GmsHeader object or null if the event contains a message of a different type
-     */
-    protected static GMS.GmsHeader getGMSHeader(Event evt){
-        return evt.getType() == Event.MSG? getGMSHeader((Message)evt.getArg()) : null;
-    }
-
-    protected static GMS.GmsHeader getGMSHeader(Message msg){
+    protected static GMS.GmsHeader getGMSHeader(Message msg) {
         Header hdr = msg.getHeader(GMS_ID);
         if(hdr instanceof GMS.GmsHeader)
             return (GMS.GmsHeader)hdr;
         return null;
+    }
+
+    protected static JoinRsp getJoinResponse(Message msg) {
+        byte[] buf=msg.getRawBuffer();
+        try {
+            return buf != null? Util.streamableFromBuffer(JoinRsp::new, buf, msg.getOffset(), msg.getLength()) : null;
+        }
+        catch(Exception e) {
+            return null;
+        }
     }
 }
