@@ -4,19 +4,22 @@ import org.jgroups.*;
 import org.jgroups.annotations.*;
 import org.jgroups.conf.ConfiguratorFactory;
 import org.jgroups.protocols.FORWARD_TO_COORD;
+import org.jgroups.protocols.TP;
 import org.jgroups.protocols.relay.config.RelayConfig;
-import org.jgroups.stack.AddressGenerator;
 import org.jgroups.stack.Protocol;
-import org.jgroups.util.*;
 import org.jgroups.util.UUID;
+import org.jgroups.util.*;
 import org.w3c.dom.Node;
 
 import java.io.DataInput;
 import java.io.DataOutput;
+import java.io.IOException;
 import java.io.InputStream;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.LongAdder;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
 
 /**
  *
@@ -29,6 +32,9 @@ import java.util.concurrent.atomic.AtomicLong;
 @XmlElement(name="RelayConfiguration",type="relay:RelayConfigurationType")
 @MBean(description="RELAY2 protocol")
 public class RELAY2 extends Protocol {
+    // reserved flags
+    public static final short site_master_flag            = 1 << 0;
+    public static final short can_become_site_master_flag = 1 << 1;
 
     /* ------------------------------------------    Properties     ---------------------------------------------- */
     @Property(description="Name of the site (needs to be defined in the configuration)",writable=false)
@@ -75,10 +81,17 @@ public class RELAY2 extends Protocol {
     @ManagedAttribute(description="Whether this member is a site master")
     protected volatile boolean                         is_site_master;
 
+    @ManagedAttribute(description="The first of all site masters broadcasts route-up/down messages to all members of " +
+      "the local cluster")
+    protected volatile boolean                         broadcast_route_notifications;
+
     // A list of site masters in this (local) site
     protected volatile List<Address>                   site_masters;
 
     protected SiteMasterPicker                         site_master_picker;
+
+    /** Listens for notifications about becoming site master (arg: true), or ceasing to be site master (arg: false) */
+    protected Consumer<Boolean>                        site_master_listener;
 
     protected volatile Relayer                         relayer;
 
@@ -96,34 +109,37 @@ public class RELAY2 extends Protocol {
       "members of the local site for load balancing, reducing work for itself")
     protected boolean                                  can_forward_local_cluster;
 
+    @Property(description="Number of millis to wait for topology detection")
+    protected long                                     topo_wait_time=2000;
+
     // protocol IDs above RELAY2
     protected short[]                                  prots_above;
 
     protected volatile RouteStatusListener             route_status_listener;
 
     /** Number of messages forwarded to the local SiteMaster */
-    protected final AtomicLong                         forward_to_site_master=new AtomicLong(0);
+    protected final LongAdder                          forward_to_site_master=new LongAdder();
 
-    protected final AtomicLong                         forward_sm_time=new AtomicLong(0);
+    protected final LongAdder                          forward_sm_time=new LongAdder();
 
     /** Number of messages relayed by the local SiteMaster to a remote SiteMaster */
-    protected final AtomicLong                         relayed=new AtomicLong(0);
+    protected final LongAdder                          relayed=new LongAdder();
 
     /** Total time spent relaying messages from the local SiteMaster to remote SiteMasters (in ns) */
-    protected final AtomicLong                         relayed_time=new AtomicLong(0);
+    protected final LongAdder                          relayed_time=new LongAdder();
 
     /** Number of messages (received from a remote Sitemaster and) delivered by the local SiteMaster to a local node */
-    protected final AtomicLong                         forward_to_local_mbr=new AtomicLong(0);
+    protected final LongAdder                          forward_to_local_mbr=new LongAdder();
 
-    protected final AtomicLong                         forward_to_local_mbr_time=new AtomicLong(0);
+    protected final LongAdder                          forward_to_local_mbr_time=new LongAdder();
 
     /** Number of messages delivered locally, e.g. received and delivered to self */
-    protected final AtomicLong                         local_deliveries=new AtomicLong(0);
+    protected final LongAdder                          local_deliveries=new LongAdder();
 
     /** Total time (ms) for received messages that are delivered locally */
-    protected final AtomicLong                         local_delivery_time=new AtomicLong(0);
+    protected final LongAdder                          local_delivery_time=new LongAdder();
 
-
+    protected final ResponseCollector<String>          topo_collector=new ResponseCollector<>();
 
     // Fluent configuration
     public RELAY2 site(String site_name)               {site=site_name;              return this;}
@@ -135,6 +151,8 @@ public class RELAY2 extends Protocol {
     public RELAY2 siteMasterPicker(SiteMasterPicker s) {if(s != null) this.site_master_picker=s; return this;}
 
     public String  site()                              {return site;}
+    public List<Address> siteMasters()                 {return site_masters;}
+    public List<Address> members()                     {return members;}
     public List<String> siteNames()                    {return getSites();}
     public String  config()                            {return config;}
     public boolean canBecomeSiteMaster()               {return can_become_site_master;}
@@ -143,18 +161,20 @@ public class RELAY2 extends Protocol {
     public boolean asyncRelayCreation()                {return async_relay_creation;}
     public Address getLocalAddress()                   {return local_addr;}
     public TimeScheduler getTimer()                    {return timer;}
-    public void incrementRelayed()                     {relayed.incrementAndGet();}
-    public void addToRelayedTime(long delta)           {relayed_time.addAndGet(delta);}
+    public void incrementRelayed()                     {relayed.increment();}
+    public void addToRelayedTime(long delta)           {relayed_time.add(delta);}
 
 
     public RouteStatusListener getRouteStatusListener()       {return route_status_listener;}
     public void setRouteStatusListener(RouteStatusListener l) {this.route_status_listener=l;}
 
+    public RELAY2 setSiteMasterListener(Consumer<Boolean> l)  {site_master_listener=l; return this;}
+
     @ManagedAttribute(description="Number of messages forwarded to the local SiteMaster")
-    public long getNumForwardedToSiteMaster() {return forward_to_site_master.get();}
+    public long getNumForwardedToSiteMaster() {return forward_to_site_master.sum();}
 
     @ManagedAttribute(description="The total time (in ms) spent forwarding messages to the local SiteMaster")
-    public long getTimeForwardingToSM() {return TimeUnit.MILLISECONDS.convert(forward_sm_time.get(),TimeUnit.NANOSECONDS);}
+    public long getTimeForwardingToSM() {return TimeUnit.MILLISECONDS.convert(forward_sm_time.sum(),TimeUnit.NANOSECONDS);}
 
     @ManagedAttribute(description="The average number of messages / s for forwarding messages to the local SiteMaster")
     public long getAvgMsgsForwardingToSM() {return getTimeForwardingToSM() > 0?
@@ -163,35 +183,30 @@ public class RELAY2 extends Protocol {
 
 
     @ManagedAttribute(description="Number of messages sent by this SiteMaster to a remote SiteMaster")
-    public long getNumRelayed() {return relayed.get();}
+    public long getNumRelayed() {return relayed.sum();}
 
     @ManagedAttribute(description="The total time (ms) spent relaying messages from this SiteMaster to remote SiteMasters")
-    public long getTimeRelaying() {return TimeUnit.MILLISECONDS.convert(relayed_time.get(), TimeUnit.NANOSECONDS);}
+    public long getTimeRelaying() {return TimeUnit.MILLISECONDS.convert(relayed_time.sum(), TimeUnit.NANOSECONDS);}
 
     @ManagedAttribute(description="The average number of messages / s for relaying messages from this SiteMaster to remote SiteMasters")
     public long getAvgMsgsRelaying() {return getTimeRelaying() > 0? (long)(getNumRelayed() / (getTimeRelaying()/1000.0)) : 0;}
 
-
-
     @ManagedAttribute(description="Number of messages (received from a remote Sitemaster and) delivered " +
       "by this SiteMaster to a local node")
-    public long getNumForwardedToLocalMbr() {return forward_to_local_mbr.get();}
+    public long getNumForwardedToLocalMbr() {return forward_to_local_mbr.sum();}
 
     @ManagedAttribute(description="The total time (in ms) spent forwarding messages to a member in the same site")
-    public long getTimeForwardingToLocalMbr() {return TimeUnit.MILLISECONDS.convert(forward_to_local_mbr_time.get(),TimeUnit.NANOSECONDS);}
+    public long getTimeForwardingToLocalMbr() {return TimeUnit.MILLISECONDS.convert(forward_to_local_mbr_time.sum(),TimeUnit.NANOSECONDS);}
 
     @ManagedAttribute(description="The average number of messages / s for forwarding messages to a member in the same site")
     public long getAvgMsgsForwardingToLocalMbr() {return getTimeForwardingToLocalMbr() > 0?
                                                   (long)(getNumForwardedToLocalMbr() / (getTimeForwardingToLocalMbr()/1000.0)) : 0;}
 
-
-
-
     @ManagedAttribute(description="Number of messages delivered locally, e.g. received and delivered to self")
-    public long getNumLocalDeliveries() {return local_deliveries.get();}
+    public long getNumLocalDeliveries() {return local_deliveries.sum();}
 
     @ManagedAttribute(description="The total time (ms) spent delivering received messages locally")
-    public long getTimeDeliveringLocally() {return TimeUnit.MILLISECONDS.convert(local_delivery_time.get(),TimeUnit.NANOSECONDS);}
+    public long getTimeDeliveringLocally() {return TimeUnit.MILLISECONDS.convert(local_delivery_time.sum(),TimeUnit.NANOSECONDS);}
 
     @ManagedAttribute(description="The average number of messages / s for delivering received messages locally")
     public long getAvgMsgsDeliveringLocally() {return getTimeDeliveringLocally() > 0?
@@ -203,14 +218,14 @@ public class RELAY2 extends Protocol {
 
     public void resetStats() {
         super.resetStats();
-        forward_to_site_master.set(0);
-        forward_sm_time.set(0);
-        relayed.set(0);
-        relayed_time.set(0);
-        forward_to_local_mbr.set(0);
-        forward_to_local_mbr_time.set(0);
-        local_deliveries.set(0);
-        local_delivery_time.set(0);
+        forward_to_site_master.reset();
+        forward_sm_time.reset();
+        relayed.reset();
+        relayed_time.reset();
+        forward_to_local_mbr.reset();
+        forward_to_local_mbr_time.reset();
+        local_deliveries.reset();
+        local_delivery_time.reset();
     }
 
     public View getBridgeView(String cluster_name) {
@@ -225,9 +240,8 @@ public class RELAY2 extends Protocol {
     }
 
     public List<String> getSites() {
-        return sites.isEmpty()? Collections.<String>emptyList() : new ArrayList<>(sites.keySet());
+        return sites.isEmpty()? Collections.emptyList() : new ArrayList<>(sites.keySet());
     }
-
 
     public void init() throws Exception {
         super.init();
@@ -250,6 +264,10 @@ public class RELAY2 extends Protocol {
         timer=getTransport().getTimer();
         if(site == null)
             throw new IllegalArgumentException("site cannot be null");
+        TP tp=getTransport();
+        if(tp.getUseIpAddresses())
+            throw new IllegalArgumentException(String.format("%s cannot be used if %s.use_ip_addrs is true",
+                                                             RELAY2.class.getSimpleName(), tp.getClass().getSimpleName()));
         if(max_site_masters < 1) {
             log.warn("max_size_masters was " + max_site_masters + ", changed to 1");
             max_site_masters=1;
@@ -257,7 +275,7 @@ public class RELAY2 extends Protocol {
 
         if(site_master_picker_impl != null) {
             Class<SiteMasterPicker> clazz=Util.loadClass(site_master_picker_impl, (Class)null);
-            this.site_master_picker=clazz.newInstance();
+            this.site_master_picker=clazz.getDeclaredConstructor().newInstance();
         }
 
         if(config != null)
@@ -266,7 +284,7 @@ public class RELAY2 extends Protocol {
         site_config=sites.get(site);
         if(site_config == null)
             throw new Exception("site configuration for \"" + site + "\" not found in " + config);
-        log.trace(local_addr + ": site configuration:\n" + site_config);
+        log.trace("site configuration:\n" + site_config);
 
         if(!site_config.getForwards().isEmpty())
             log.warn(local_addr + ": forwarding routes are currently not supported and will be ignored. This will change " +
@@ -280,13 +298,11 @@ public class RELAY2 extends Protocol {
 
         if(enable_address_tagging) {
             JChannel ch=getProtocolStack().getChannel();
-            ch.addAddressGenerator(new AddressGenerator() {
-                public Address generateAddress() {
-                    ExtendedUUID retval=ExtendedUUID.randomUUID();
-                    if(can_become_site_master)
-                        retval.setFlag(ExtendedUUID.can_become_site_master);
-                    return retval;
-                }
+            ch.addAddressGenerator(() -> {
+                ExtendedUUID retval=ExtendedUUID.randomUUID();
+                if(can_become_site_master)
+                    retval.setFlag(can_become_site_master_flag);
+                return retval;
             });
         }
 
@@ -307,13 +323,8 @@ public class RELAY2 extends Protocol {
      * @throws Exception
      */
     protected void parseSiteConfiguration(final Map<String,RelayConfig.SiteConfig> map) throws Exception {
-        InputStream input=null;
-        try {
-            input=ConfiguratorFactory.getConfigStream(config);
+        try(InputStream input=ConfiguratorFactory.getConfigStream(config)) {
             RelayConfig.parse(input, map);
-        }
-        finally {
-            Util.close(input);
         }
     }
 
@@ -325,6 +336,39 @@ public class RELAY2 extends Protocol {
       "Only available if we're the current coordinator (site master)")
     public String printRoutes() {
         return relayer != null? relayer.printRoutes() : "n/a (not site master)";
+    }
+
+    @ManagedOperation(description="Prints the routes that are currently up. " +
+      "Only available if we're the current coordinator (site master)")
+    public String printSites() {
+        return relayer != null? Util.print(relayer.getSiteNames()) : "n/a (not site master)";
+    }
+
+    @ManagedOperation(description="Prints the topology (site masters and local members) of this site")
+    public String printTopology(boolean all_sites) {
+        if(!all_sites)
+            return printLocalTopology();
+        if(relayer != null) // I'm a site-master
+            return _printTopology(relayer);
+        Address site_master=site_masters != null && !site_masters.isEmpty()? site_masters.get(0) : null;
+        return site_master == null? "not site-master" : fetchTopoFromSiteMaster(site_master);
+    }
+
+    @ManagedOperation(description="Prints the topology (site masters and local members) of this site")
+    public String printLocalTopology() {
+        StringBuilder sb=new StringBuilder(site).append("\n");
+        for(Address mbr: members) {
+            sb.append("  ").append(mbr);
+            PhysicalAddress pa=getPhysicalAddress(mbr);
+            if(pa != null)
+                sb.append(String.format(" (%s)", pa));
+            if(Objects.equals(mbr, local_addr))
+                sb.append(" (me)");
+            if(site_masters.contains(mbr))
+                sb.append(" // site master");
+            sb.append("\n");
+        }
+        return sb.toString();
     }
 
     /**
@@ -348,115 +392,118 @@ public class RELAY2 extends Protocol {
         return tmp != null? tmp.getRoute(site_name): null;
     }
 
-
-
     public Object down(Event evt) {
         switch(evt.getType()) {
-            case Event.MSG:
-                Message msg=(Message)evt.getArg();
-                Address dest=msg.getDest();
-                if(dest == null || !(dest instanceof SiteAddress))
-                    break;
-
-                SiteAddress target=(SiteAddress)dest;
-                Address src=msg.getSrc();
-                SiteAddress sender=src instanceof SiteMaster? new SiteMaster(((SiteMaster)src).getSite())
-                  : new SiteUUID((UUID)local_addr, UUID.get(local_addr), site);
-                if(local_addr instanceof ExtendedUUID)
-                    ((ExtendedUUID)sender).addContents((ExtendedUUID)local_addr);
-
-                // target is in the same site; we can deliver the message in our local cluster
-                if(target.getSite().equals(site)) {
-                    if(local_addr.equals(target) || (target instanceof SiteMaster && is_site_master)) {
-                        // we cannot simply pass msg down, as the transport doesn't know how to send a message to a (e.g.) SiteMaster
-                        long start=stats? System.nanoTime() : 0;
-                        forwardTo(local_addr, target, sender, msg, false);
-                        if(stats) {
-                            local_delivery_time.addAndGet(System.nanoTime() - start);
-                            local_deliveries.incrementAndGet();
-                        }
-                    }
-                    else
-                        deliverLocally(target, sender, msg);
-                    return null;
-                }
-
-                // forward to the coordinator unless we're the coord (then route the message directly)
-                if(!is_site_master) {
-                    long start=stats? System.nanoTime() : 0;
-                    Address site_master=pickSiteMaster(sender);
-                    if(site_master == null)
-                        throw new IllegalStateException("site master is null");
-                    forwardTo(site_master, target, sender, msg, max_site_masters == 1);
-                    if(stats) {
-                        forward_sm_time.addAndGet(System.nanoTime() - start);
-                        forward_to_site_master.incrementAndGet();
-                    }
-                }
-                else
-                    route(target, sender, msg);
-                return null;
-
             case Event.SET_LOCAL_ADDRESS:
-                local_addr=(Address)evt.getArg();
+                local_addr=evt.getArg();
                 break;
             case Event.VIEW_CHANGE:
-                handleView((View)evt.getArg());
+                handleView(evt.getArg());
                 break;
         }
         return down_prot.down(evt);
     }
 
 
+    public Object down(Message msg) {
+        Address dest=msg.getDest();
+        if(!(dest instanceof SiteAddress))
+            return down_prot.down(msg);
+
+        SiteAddress target=(SiteAddress)dest;
+        Address src=msg.getSrc();
+        SiteAddress sender=src instanceof SiteMaster? new SiteMaster(((SiteMaster)src).getSite())
+          : new SiteUUID((UUID)local_addr, NameCache.get(local_addr), site);
+        if(local_addr instanceof ExtendedUUID)
+            ((ExtendedUUID)sender).addContents((ExtendedUUID)local_addr);
+
+        // target is in the same site; we can deliver the message in our local cluster
+        if(target.getSite().equals(site)) {
+            if(local_addr.equals(target) || (target instanceof SiteMaster && is_site_master)) {
+                // we cannot simply pass msg down, as the transport doesn't know how to send a message to a (e.g.) SiteMaster
+                long start=stats? System.nanoTime() : 0;
+                forwardTo(local_addr, target, sender, msg, false);
+                if(stats) {
+                    local_delivery_time.add(System.nanoTime() - start);
+                    local_deliveries.increment();
+                }
+            }
+            else
+                deliverLocally(target, sender, msg);
+            return null;
+        }
+
+        // forward to the site master unless we're the site master (then route the message directly)
+        if(!is_site_master) {
+            long start=stats? System.nanoTime() : 0;
+            Address site_master=pickSiteMaster(sender);
+            if(site_master == null)
+                throw new IllegalStateException("site master is null");
+            forwardTo(site_master, target, sender, msg, max_site_masters == 1);
+            if(stats) {
+                forward_sm_time.add(System.nanoTime() - start);
+                forward_to_site_master.increment();
+            }
+        }
+        else
+            route(target, sender, msg);
+        return null;
+    }
+
+
     public Object up(Event evt) {
         switch(evt.getType()) {
-            case Event.MSG:
-                Message msg=(Message)evt.getArg();
-                Relay2Header hdr=(Relay2Header)msg.getHeader(id);
-                Address dest=msg.getDest();
-
-                if(hdr == null) {
-                    // forward a multicast message to all bridges except myself, then pass up
-                    if(dest == null && is_site_master && relay_multicasts && !msg.isFlagSet(Message.Flag.NO_RELAY)) {
-                        Address src=msg.getSrc();
-                        Address sender=new SiteUUID((UUID)msg.getSrc(), UUID.get(msg.getSrc()), site);
-                        if(src instanceof ExtendedUUID)
-                            ((SiteUUID)sender).addContents((ExtendedUUID)src);
-                        sendToBridges(sender, msg, site);
-                    }
-                    break; // pass up
-                }
-                else { // header is not null
-                    if(dest != null)
-                        handleMessage(hdr, msg);
-                    else
-                        deliver(null, hdr.original_sender, msg);
-                }
-                return null;
-
             case Event.VIEW_CHANGE:
-                handleView((View)evt.getArg());
+                handleView(evt.getArg());
                 break;
         }
         return up_prot.up(evt);
     }
 
+    public Object up(Message msg) {
+        Relay2Header hdr=msg.getHeader(id);
+        Address dest=msg.getDest();
+
+        if(hdr == null) {
+            // forward a multicast message to all bridges except myself, then pass up
+            if(dest == null && is_site_master && relay_multicasts && !msg.isFlagSet(Message.Flag.NO_RELAY)) {
+                Address src=msg.getSrc();
+                SiteUUID sender=new SiteUUID((UUID)msg.getSrc(), NameCache.get(msg.getSrc()), site);
+                if(src instanceof ExtendedUUID)
+                    sender.addContents((ExtendedUUID)src);
+                sendToBridges(sender, msg, site);
+            }
+            return up_prot.up(msg); // pass up
+        }
+        if(handleAdminMessage(hdr, msg.src()))
+            return null;
+        if(dest != null)
+            handleMessage(hdr, msg);
+        else
+            deliver(null, hdr.original_sender, msg);
+        return null;
+    }
+
     public void up(MessageBatch batch) {
         for(Message msg: batch) {
-            Relay2Header hdr=(Relay2Header)msg.getHeader(id);
+            Relay2Header hdr=msg.getHeader(id);
             Address dest=msg.getDest();
 
             if(hdr == null) {
                 // forward a multicast message to all bridges except myself, then pass up
                 if(dest == null && is_site_master && relay_multicasts && !msg.isFlagSet(Message.Flag.NO_RELAY)) {
                     Address src=msg.getSrc();
-                    Address sender=new SiteUUID((UUID)msg.getSrc(), UUID.get(msg.getSrc()), site);
+                    SiteUUID sender=new SiteUUID((UUID)msg.getSrc(), NameCache.get(msg.getSrc()), site);
                     if(src instanceof ExtendedUUID)
-                        ((SiteUUID)sender).addContents((ExtendedUUID)src);
+                        sender.addContents((ExtendedUUID)src);
                     sendToBridges(sender, msg, site);
                 }
             }
             else { // header is not null
+                if(handleAdminMessage(hdr, batch.sender())) {
+                    batch.remove(msg);
+                    continue;
+                }
                 batch.remove(msg); // message is consumed
                 if(dest != null)
                     handleMessage(hdr, msg);
@@ -468,6 +515,50 @@ public class RELAY2 extends Protocol {
             up_prot.up(batch);
     }
 
+    protected PhysicalAddress getPhysicalAddress(Address mbr) {
+        return mbr != null? (PhysicalAddress)down(new Event(Event.GET_PHYSICAL_ADDRESS, mbr)) : null;
+    }
+
+    public void handleView(View view) {
+        members=view.getMembers(); // First, save the members for routing received messages to local members
+
+        List<Address> old_site_masters=site_masters;
+        List<Address> new_site_masters=determineSiteMasters(view);
+
+        boolean become_site_master=new_site_masters.contains(local_addr)
+          && (old_site_masters == null || !old_site_masters.contains(local_addr));
+        boolean cease_site_master=old_site_masters != null
+          && old_site_masters.contains(local_addr) && !new_site_masters.contains(local_addr);
+        site_masters=new_site_masters;
+
+        if(!site_masters.isEmpty() && site_masters.get(0).equals(local_addr))
+            broadcast_route_notifications=true;
+
+        if(become_site_master) {
+            is_site_master=true;
+            final String bridge_name="_" + NameCache.get(local_addr);
+            if(relayer != null)
+                relayer.stop();
+            relayer=new Relayer(this, log);
+            final Relayer tmp=relayer;
+            if(async_relay_creation)
+                timer.execute(() -> startRelayer(tmp, bridge_name));
+            else
+                startRelayer(relayer, bridge_name);
+            notifySiteMasterListener(true);
+        }
+        else {
+            if(cease_site_master) { // ceased being the site master: stop the relayer
+                is_site_master=false;
+                notifySiteMasterListener(false);
+                log.trace(local_addr + ": ceased to be site master; closing bridges");
+                if(relayer != null)
+                    relayer.stop();
+            }
+        }
+    }
+
+
     /** Called to handle a message received by the relayer */
     protected void handleRelayMessage(Relay2Header hdr, Message msg) {
         if(hdr.final_dest != null) {
@@ -478,8 +569,7 @@ public class RELAY2 extends Protocol {
                 SiteUUID site_uuid=(SiteUUID)hdr.final_dest;
 
                 //  If configured to do so, we want to load-balance these messages,
-                int index=(int)Util.random( members.size()) -1;
-                UUID tmp=(UUID)members.get(index);
+                UUID tmp=(UUID)Util.pickRandomElement(members);
                 SiteAddress final_dest=new SiteUUID(tmp, site_uuid.getName(), site_uuid.getSite());
 
                 // If we select a different address to handle this message, we handle it here.
@@ -493,15 +583,37 @@ public class RELAY2 extends Protocol {
         }
         else {
             Message copy=copy(msg).dest(null).src(null).putHeader(id, hdr);
-            down_prot.down(new Event(Event.MSG, copy)); // multicast locally
+            down_prot.down(copy); // multicast locally
 
             // Don't forward: https://issues.jboss.org/browse/JGRP-1519
             // sendToBridges(msg.getSrc(), buf, from_site, site_id);  // forward to all bridges except self and from
         }
     }
 
-
-
+    /** Handles SITES_UP/SITES_DOWN/TOPO_REQ/TOPO_RSP messages */
+    protected boolean handleAdminMessage(Relay2Header hdr, Address sender) {
+        switch(hdr.type) {
+            case Relay2Header.SITES_UP:
+            case Relay2Header.SITES_DOWN:
+                if(route_status_listener != null) {
+                    if(hdr.type == Relay2Header.SITES_UP)
+                        route_status_listener.sitesUp(hdr.getSites());
+                    else
+                        route_status_listener.sitesDown(hdr.getSites());
+                }
+                return true;
+            case Relay2Header.TOPO_REQ:
+                Message topo_rsp=new Message(sender)
+                  .putHeader(id, new Relay2Header(Relay2Header.TOPO_RSP).setSites(_printTopology(relayer)));
+                down_prot.down(topo_rsp);
+                return true;
+            case Relay2Header.TOPO_RSP:
+                String rsp=hdr.sites != null && hdr.sites.length > 0? hdr.sites[0] : null;
+                topo_collector.add(sender, rsp);
+                return true;
+        }
+        return false;
+    }
 
 
     /** Called to handle a message received by the transport */
@@ -520,7 +632,6 @@ public class RELAY2 extends Protocol {
                 break;
         }
     }
-
 
 
     /**
@@ -581,9 +692,9 @@ public class RELAY2 extends Protocol {
      */
     protected void sendSiteUnreachableTo(Address dest, String target_site) {
         Message msg=new Message(dest).setFlag(Message.Flag.OOB, Message.Flag.INTERNAL)
-          .src(new SiteUUID((UUID)local_addr, UUID.get(local_addr), site))
+          .src(new SiteUUID((UUID)local_addr, NameCache.get(local_addr), site))
           .putHeader(id,new Relay2Header(Relay2Header.SITE_UNREACHABLE,new SiteMaster(target_site),null));
-        down_prot.down(new Event(Event.MSG, msg));
+        down_prot.down(msg);
     }
 
     protected void forwardTo(Address next_dest, SiteAddress final_dest, Address original_sender, final Message msg,
@@ -597,7 +708,7 @@ public class RELAY2 extends Protocol {
         if(forward_to_current_coord && forwarding_protocol_present)
             down_prot.down(new Event(Event.FORWARD_TO_COORD, copy));
         else
-            down_prot.down(new Event(Event.MSG, copy));
+            down_prot.down(copy);
     }
 
 
@@ -624,8 +735,8 @@ public class RELAY2 extends Protocol {
         long start=stats? System.nanoTime() : 0;
         forwardTo(local_dest, dest, sender, msg, send_to_coord);
         if(stats) {
-            forward_to_local_mbr_time.addAndGet(System.nanoTime() - start);
-            forward_to_local_mbr.incrementAndGet();
+            forward_to_local_mbr_time.add(System.nanoTime() - start);
+            forward_to_local_mbr.increment();
         }
     }
 
@@ -636,10 +747,10 @@ public class RELAY2 extends Protocol {
             if(log.isTraceEnabled())
                 log.trace(local_addr + ": delivering message from " + sender);
             long start=stats? System.nanoTime() : 0;
-            up_prot.up(new Event(Event.MSG, copy));
+            up_prot.up(copy);
             if(stats) {
-                local_delivery_time.addAndGet(System.nanoTime() - start);
-                local_deliveries.incrementAndGet();
+                local_delivery_time.add(System.nanoTime() - start);
+                local_deliveries.increment();
             }
         }
         catch(Exception e) {
@@ -647,51 +758,19 @@ public class RELAY2 extends Protocol {
         }
     }
 
+    protected void sitesChange(boolean down, String ... sites) {
+        if(!broadcast_route_notifications || sites == null || sites.length == 0)
+            return;
+        Relay2Header hdr=new Relay2Header(down? Relay2Header.SITES_DOWN : Relay2Header.SITES_UP, null, null)
+          .setSites(sites);
+        down_prot.down(new Message(null).putHeader(id, hdr).setFlag(Message.Flag.NO_RELAY));
+    }
+
     /** Copies the message, but only the headers above the current protocol (RELAY) (or RpcDispatcher related headers) */
     protected Message copy(Message msg) {
         return msg.copy(true, Global.BLOCKS_START_ID, this.prots_above);
     }
 
-
-
-    public void handleView(View view) {
-        members=view.getMembers(); // First, save the members for routing received messages to local members
-
-        List<Address> old_site_masters=site_masters;
-        List<Address> new_site_masters=determineSiteMasters(view);
-
-        boolean become_site_master=new_site_masters.contains(local_addr)
-          && (old_site_masters == null || !old_site_masters.contains(local_addr));
-        boolean cease_site_master=old_site_masters != null
-          && old_site_masters.contains(local_addr) && !new_site_masters.contains(local_addr);
-        site_masters=new_site_masters;
-
-        if(become_site_master) {
-            is_site_master=true;
-            final String bridge_name="_" + UUID.get(local_addr);
-            if(relayer != null)
-                relayer.stop();
-            relayer=new Relayer(this, log);
-            final Relayer tmp=relayer;
-            if(async_relay_creation) {
-                timer.execute(new Runnable() {
-                    public void run() {
-                        startRelayer(tmp, bridge_name);
-                    }
-                });
-            }
-            else
-                startRelayer(relayer, bridge_name);
-        }
-        else {
-            if(cease_site_master) { // ceased being the site master: stop the relayer
-                is_site_master=false;
-                log.trace(local_addr + ": ceased to be site master; closing bridges");
-                if(relayer != null)
-                    relayer.stop();
-            }
-        }
-    }
 
 
     protected void startRelayer(Relayer rel, String bridge_name) {
@@ -705,6 +784,10 @@ public class RELAY2 extends Protocol {
     }
 
 
+    protected void notifySiteMasterListener(boolean flag) {
+        if(site_master_listener != null)
+            site_master_listener.accept(flag);
+    }
 
     /**
      * Iterates over the list of members and adds every member if the member's rank is below max_site_masters. Skips
@@ -716,7 +799,7 @@ public class RELAY2 extends Protocol {
         int selected=0;
 
         for(Address member: view) {
-            if(member instanceof ExtendedUUID && !((ExtendedUUID)member).isFlagSet(ExtendedUUID.can_become_site_master))
+            if(member instanceof ExtendedUUID && !((ExtendedUUID)member).isFlagSet(can_become_site_master_flag))
                 continue;
 
             if(selected++ < max_site_masters)
@@ -724,9 +807,9 @@ public class RELAY2 extends Protocol {
         }
 
         if(retval.isEmpty()) {
-            Address tmp=Util.getCoordinator(view);
-            if(tmp != null)
-                retval.add(Util.getCoordinator(view));
+            Address coord=view.getCoord();
+            if(coord != null)
+                retval.add(coord);
         }
         return retval;
     }
@@ -740,44 +823,127 @@ public class RELAY2 extends Protocol {
     }
 
 
+    protected String _printTopology(Relayer rel) {
+        Map<Address,String> local_sitemasters=new HashMap<>();
+        List<String> all_sites=rel.getSiteNames();
+        List<Supplier<Boolean>> topo_reqs=new ArrayList<>();
+        for(String site_name: all_sites) {
+            Route r=rel.getRoute(site_name);
+            JChannel bridge=r.bridge();
+            Address site_master=r.site_master;
+            if(Objects.equals(site_master, r.bridge().getAddress()))
+                local_sitemasters.put(site_master, printLocalTopology());
+            else {
+                local_sitemasters.put(site_master, null);
+                topo_reqs.add(() -> sendTopoReq(bridge, site_master));
+            }
+        }
+        topo_collector.reset(local_sitemasters.keySet());
+        local_sitemasters.entrySet().stream().filter(e -> e.getValue() != null)
+          .forEach(e -> topo_collector.add(e.getKey(), e.getValue()));
+        topo_reqs.forEach(Supplier::get);
+
+        topo_collector.waitForAllResponses(topo_wait_time);
+        Map<Address,String> rsps=topo_collector.getResults();
+        if(rsps == null || rsps.isEmpty())
+            return "n/a";
+        return String.join("\n", rsps.values());
+    }
+
+    protected boolean sendTopoReq(JChannel bridge, Address dest) {
+        Message topo_req=new Message(dest).putHeader(id, new Relay2Header(Relay2Header.TOPO_REQ));
+        try {
+            bridge.send(topo_req);
+            return true;
+        }
+        catch(Exception e) {
+            log.warn("%s: failed sending TOPO-REQ message to %s: %s", bridge.getAddress(), dest, e);
+            return false;
+        }
+    }
+
+    protected String fetchTopoFromSiteMaster(Address sm) {
+        topo_collector.reset(sm);
+        Message topo_req=new Message(sm).putHeader(id, new Relay2Header(Relay2Header.TOPO_REQ));
+        down_prot.down(topo_req);
+        topo_collector.waitForAllResponses(topo_wait_time);
+        Map<Address,String> rsps=topo_collector.getResults();
+        return rsps != null? rsps.get(sm) : null;
+    }
+
 
     public static class Relay2Header extends Header {
         public static final byte DATA             = 1;
         public static final byte SITE_UNREACHABLE = 2; // final_dest is a SiteMaster
         public static final byte HOST_UNREACHABLE = 3; // final_dest is a SiteUUID (not currently used)
+        public static final byte SITES_UP         = 4;
+        public static final byte SITES_DOWN       = 5;
+        public static final byte TOPO_REQ         = 6;
+        public static final byte TOPO_RSP         = 7;
 
-        protected byte    type;
-        protected Address final_dest;
-        protected Address original_sender;
+        protected byte     type;
+        protected Address  final_dest;
+        protected Address  original_sender;
+        protected String[] sites; // used with SITES_UP/SITES_DOWN/TOPO_RSP
 
 
         public Relay2Header() {
         }
 
-        public Relay2Header(byte type, Address final_dest, Address original_sender) {
+        public Relay2Header(byte type) {
             this.type=type;
+        }
+
+        public Relay2Header(byte type, Address final_dest, Address original_sender) {
+            this(type);
             this.final_dest=final_dest;
             this.original_sender=original_sender;
         }
+        public short getMagicId() {return 80;}
+        public Supplier<? extends Header> create() {return Relay2Header::new;}
 
-        public int size() {
-            return Global.BYTE_SIZE + Util.size(final_dest) + Util.size(original_sender);
+        public Relay2Header setSites(String ... s) {
+            sites=s;
+            return this;
         }
 
-        public void writeTo(DataOutput out) throws Exception {
+        public String[] getSites() {
+            return sites;
+        }
+
+        @Override
+        public int serializedSize() {
+            return Global.BYTE_SIZE + Util.size(final_dest) + Util.size(original_sender) + sizeOf(sites);
+        }
+
+        @Override
+        public void writeTo(DataOutput out) throws IOException {
             out.writeByte(type);
             Util.writeAddress(final_dest, out);
             Util.writeAddress(original_sender, out);
+            out.writeInt(sites == null? 0 : sites.length);
+            if(sites != null) {
+                for(String s: sites)
+                    Bits.writeString(s, out);
+            }
         }
 
-        public void readFrom(DataInput in) throws Exception {
+        @Override
+        public void readFrom(DataInput in) throws IOException, ClassNotFoundException {
             type=in.readByte();
             final_dest=Util.readAddress(in);
             original_sender=Util.readAddress(in);
+            int num_elements=in.readInt();
+            if(num_elements == 0)
+                return;
+            sites=new String[num_elements];
+            for(int i=0; i < sites.length; i++)
+                sites[i]=Bits.readString(in);
         }
 
         public String toString() {
-            return typeToString(type) + " [dest=" + final_dest + ", sender=" + original_sender + "]";
+            return typeToString(type) + " [dest=" + final_dest + ", sender=" + original_sender +
+              (type == TOPO_RSP? ", topos=" : ", sites=") + Arrays.toString(sites) + "]";
         }
 
         protected static String typeToString(byte type) {
@@ -785,8 +951,21 @@ public class RELAY2 extends Protocol {
                 case DATA:             return "DATA";
                 case SITE_UNREACHABLE: return "SITE_UNREACHABLE";
                 case HOST_UNREACHABLE: return "HOST_UNREACHABLE";
+                case SITES_UP:         return "SITES_UP";
+                case SITES_DOWN:       return "SITES_DOWN";
+                case TOPO_REQ:         return "TOPO_REQ";
+                case TOPO_RSP:         return "TOPO_RSP";
                 default:               return "<unknown>";
             }
+        }
+
+        protected static int sizeOf(String[] arr) {
+            int retval=Global.INT_SIZE; // number of elements
+            if(arr != null) {
+                for(String s: arr)
+                    retval+=Bits.sizeUTF(s) + 1; // presence bytes
+            }
+            return retval;
         }
     }
 }
