@@ -32,8 +32,6 @@ public class UNICAST_ConnectionTests {
     @DataProvider
     static Object[][] configProvider() {
         return new Object[][]{
-          {UNICAST.class},
-          {UNICAST2.class},
           {UNICAST3.class}
         };
     }
@@ -123,8 +121,6 @@ public class UNICAST_ConnectionTests {
      */
     @Test(dataProvider="configProvider")
     public void testBClosingUnilaterally(Class<? extends Protocol> unicast) throws Exception {
-        if(unicast.equals(UNICAST2.class))
-            return; // UNICAST2 always fails this test (due to its design), so skip it
         setup(unicast);
         sendToEachOtherAndCheck(10);
 
@@ -168,7 +164,7 @@ public class UNICAST_ConnectionTests {
 
         // add a Drop protocol to drop the first unicast message
         Drop drop=new Drop(true);
-        a.getProtocolStack().insertProtocol(drop, ProtocolStack.BELOW,(Class<? extends Protocol>[])Util.getUnicastProtocols());
+        a.getProtocolStack().insertProtocol(drop, ProtocolStack.Position.BELOW,(Class<? extends Protocol>[])Util.getUnicastProtocols());
 
         // then send messages from A to B
         sendAndCheck(a, b_addr, 10, r2);
@@ -193,7 +189,7 @@ public class UNICAST_ConnectionTests {
         final List<Message> msgs=new ArrayList<>(NUM);
 
         for(int i=1; i <= NUM; i++) {
-            Message msg=new Message(b_addr, a_addr, i);
+            Message msg=new Message(b_addr, i).src(a_addr);
             Header hdr=createDataHeader(ucast, 1, (short)2, true);
             msg.putHeader(ucast.getId(), hdr);
             msgs.add(msg);
@@ -204,17 +200,15 @@ public class UNICAST_ConnectionTests {
         final CyclicBarrier barrier=new CyclicBarrier(NUM+1);
         for(int i=0; i < NUM; i++) {
             final int index=i;
-            threads[i]=new Thread() {
-                public void run() {
-                    try {
-                        barrier.await();
-                        ucast.up(new Event(Event.MSG,msgs.get(index)));
-                    }
-                    catch(Exception e) {
-                        e.printStackTrace();
-                    }
+            threads[i]=new Thread(() -> {
+                try {
+                    barrier.await();
+                    ucast.up(msgs.get(index));
                 }
-            };
+                catch(Exception e) {
+                    e.printStackTrace();
+                }
+            });
             threads[i].start();
         }
 
@@ -247,15 +241,10 @@ public class UNICAST_ConnectionTests {
     }
 
 
-    protected Header createDataHeader(Protocol unicast, long seqno, short conn_id, boolean first) {
-        if(unicast instanceof UNICAST)
-            return UNICAST.UnicastHeader.createDataHeader(seqno,conn_id, first);
-        if(unicast instanceof UNICAST2)
-            return UNICAST2.Unicast2Header.createDataHeader(seqno, conn_id, first);
+    protected static Header createDataHeader(Protocol unicast, long seqno, short conn_id, boolean first) {
         if(unicast instanceof UNICAST3)
-            return UNICAST3.Header.createDataHeader(seqno, conn_id, first);
-        throw new IllegalArgumentException("protocol " + unicast.getClass().getSimpleName() + " needs to be " +
-                                             "UNICAST, UNICAST2 or UNICAST3");
+            return UnicastHeader3.createDataHeader(seqno, conn_id, first);
+        throw new IllegalArgumentException("protocol " + unicast.getClass().getSimpleName() + " needs to be UNICAST3");
     }
 
 
@@ -297,20 +286,12 @@ public class UNICAST_ConnectionTests {
         assert size == num : "list has " + size + " elements (expected " + num + "): " + list;
     }
 
-    protected void removeConnection(Protocol prot, Address target) {
+    protected static void removeConnection(Protocol prot, Address target) {
         removeConnection(prot, target, false);
     }
 
-    protected void removeConnection(Protocol prot, Address target, boolean remove) {
-        if(prot instanceof UNICAST) {
-            UNICAST unicast=(UNICAST)prot;
-            unicast.removeConnection(target);
-        }
-        else if(prot instanceof UNICAST2) {
-            UNICAST2 unicast=(UNICAST2)prot;
-            unicast.removeConnection(target);
-        }
-        else if(prot instanceof UNICAST3) {
+    protected static void removeConnection(Protocol prot, Address target, boolean remove) {
+        if(prot instanceof UNICAST3) {
             UNICAST3 unicast=(UNICAST3)prot;
             if(remove)
                 unicast.removeReceiveConnection(target);
@@ -318,7 +299,7 @@ public class UNICAST_ConnectionTests {
                 unicast.closeConnection(target);
         }
         else
-            throw new IllegalArgumentException("prot (" + prot + ") needs to be UNICAST, UNICAST2 or UNICAST3");
+            throw new IllegalArgumentException("prot (" + prot + ") needs to be UNICAST3");
     }
 
 
@@ -327,10 +308,8 @@ public class UNICAST_ConnectionTests {
     }
 
 
-    protected JChannel createChannel(Class<? extends Protocol> unicast_class, String name) throws Exception {
-        Protocol unicast=unicast_class.newInstance();
-        if(unicast instanceof UNICAST2)
-            unicast.setValue("stable_interval", 1000);
+    protected static JChannel createChannel(Class<? extends Protocol> unicast_class, String name) throws Exception {
+        Protocol unicast=unicast_class.getDeclaredConstructor().newInstance();
         return new JChannel(new SHARED_LOOPBACK(), unicast).name(name);
     }
 
@@ -343,7 +322,9 @@ public class UNICAST_ConnectionTests {
         }
 
         public void receive(Message msg) {
-            msgs.add((Integer)msg.getObject());
+            synchronized(msgs) {
+                msgs.add(msg.getObject());
+            }
         }
 
         public List<Integer> getMessages() { return msgs; }
@@ -370,12 +351,12 @@ public class UNICAST_ConnectionTests {
             drop_next=true;
         }
 
-        public Object down(Event evt) {
-            if(drop_next && evt.getType() == Event.MSG) {
+        public Object down(Message msg) {
+            if(drop_next) {
                 drop_next=false;
                 return null;
             }
-            return super.down(evt);
+            return super.down(msg);
         }
     }
 }
